# lottery

./: README.md  index.html  package-lock.json  package.json  vite.config.js
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  models.rs  storage.rs
src/assets/: style.css
src/components/: LotteryWheel.vue  PersonManager.vue  PrizeManager.vue  WinnerList.vue
